--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 h1{
     font-size:50px;
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
@@ -35,4 +38,16 @@ h1{
     background-image: url("images/dream-bg.png");
     background-repeat: no-repeat;   
     background-position: right;
+}
+.box{
+    width: 40%;
+    margin-left:5%;
+    margin-right:5%;
+    border-radius:10px;
+    box-shadow: 10px 10px 30px gray;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position:left;
 }
