experience and footer added

--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ h2{
     width: 40%;
     margin-left:5%;
     margin-right:5%;
+    padding-left: 2%;
+    padding-right:2%;
     border-radius:10px;
     box-shadow: 10px 10px 30px gray;
 }
@@ -50,4 +52,17 @@ h2{
     background-image: url("images/exp-bg.png");
     background-repeat: no-repeat;
     background-position:left;
+}
+#web-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange,tomato);
+    border-image-slice: 1;
+}
+#baby-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align:center;
 }
